--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
+    "angular-svg-icon": "^17.0.0",
     "preline": "^2.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
