- Create Interceptor for http request and function for handle errors in express checks for properties into requests - Create Snackbar component for Notifications and notification service for use snackbar using observables - Create component for search - Changes in form-train news form controls

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@
 /out-tsc
 /bazel-out
 
+# environment
+.env
+/src/environments/enviroment*.ts
+/src/environments
+
 # Node
 /node_modules
 npm-debug.log
