--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "devBuild": "npm run config && ng build --configuration develop",
+    "prodBuild": "npm run config && ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -24,7 +26,10 @@
     "preline": "^2.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.14.2",
+    "colors": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "fs-extra": "^11.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.9",
