Logo and Sidebar - Logo render diferente in phone or pc - Update Angular to 18.0.5

--- a/package.json
+++ b/package.json
@@ -13,24 +13,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.4",
-    "@angular/common": "^18.0.4",
-    "@angular/compiler": "^18.0.4",
-    "@angular/core": "^18.0.4",
-    "@angular/forms": "^18.0.4",
-    "@angular/platform-browser": "^18.0.4",
-    "@angular/platform-browser-dynamic": "^18.0.4",
-    "@angular/router": "^18.0.4",
+    "@angular/animations": "^18.0.5",
+    "@angular/cdk": "^18.0.5",
+    "@angular/common": "^18.0.5",
+    "@angular/compiler": "^18.0.5",
+    "@angular/core": "^18.0.5",
+    "@angular/forms": "^18.0.5",
+    "@angular/platform-browser": "^18.0.5",
+    "@angular/platform-browser-dynamic": "^18.0.5",
+    "@angular/router": "^18.0.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "angular-svg-icon": "^17.0.0",
+    "colors": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "fs-extra": "^11.1.1",
     "preline": "^2.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2",
-    "colors": "^1.4.0",
-    "dotenv": "^16.3.1",
-    "fs-extra": "^11.1.1"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.5",
